# Tiny-RISC-V-simulator

./: .clang-format  CMakeLists.txt
disfiles/: fib.c  hello.c  hello.dis
src/: 6it  LOG200  LOG200LIST  Makefile  assembly.c  assembly.h  boller  decode.c  decode.h  echo  execute.c  execute.h  fremsakridt  hellolog  helper.c  helper.h  log1  log20  logfucker  logny  logschhimmmelllll  macros.h  main.c  memory.c  memory.h  read_exec.c  read_exec.h  sim  simulate.c  simulate.h  sxchim  test.c  test.h  test8  valgrind_test  wtf
src/disfiles/: fib.dis  hello.dis
src/logs/: 1t  2  FIBLOGGER  echo  erat  fib  hello  hest  kartoffel  mumblingdrunkard5  mumblingdrunkardwithout  ny  penis  test  wtf
